--- a/Trip_Buddy_v0/app/src/main/res/layout/content_main.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/content_main.xml
@@ -25,8 +25,8 @@
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swiperefresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
