--- a/Trip_Buddy_v0/app/src/main/res/layout/gridview_text_img.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/gridview_text_img.xml
@@ -45,7 +45,7 @@
         android:textStyle="bold"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/imageView"
-        android:text="0"
+        android:text=""
         android:background="@drawable/ic_bookmark"
         />
 
